Refactor i restaurant form

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -265,18 +265,18 @@
       "createdAt": "Created At",
       "updatedAt": "Updated At",
       "actions": "Actions",
-      "filterById": "Filter by ID",
-      "filterByClientName": "Filter by Client Name",
       "filterByName": "Filter by Name",
       "applyFilters": "Apply Filters",
       "resetFilters": "Reset Filters",
-      "editProject": "Edit Project",
-      "deleteProject": "Delete Project",
+      "editRestaurant": "Edit Restaurant",
+      "deleteRestaurant": "Delete Restaurant",
       "viewUsers": "View Users",
       "previousPage": "Previous Page",
       "nextPage": "Next Page",
-      "createProject": "Create Project",
-      "loading": "Loading..."
+      "createRestaurant": "Create Restaurant",
+      "loading": "Loading...",
+      "manageTables": "Manage Tables",
+      "manageReservations": "Manage Reservations"
     },
     "restaurantPage": {
       "unauthorized": "Unauthorized",
