--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -262,18 +262,18 @@
       "createdAt": "Utworzono",
       "updatedAt": "Zaktualizowano",
       "actions": "Akcje",
-      "filterById": "Filtruj po ID",
-      "filterByClientName": "Filtruj po nazwie klienta",
       "filterByName": "Filtruj po nazwie",
       "applyFilters": "Zastosuj filtry",
       "resetFilters": "Resetuj filtry",
-      "editProject": "Edytuj projekt",
-      "deleteProject": "Usuń projekt",
+      "editRestaurant": "Edytuj restaurację",
+      "deleteRestaurant": "Usuń restaurację",
       "viewUsers": "Zobacz użytkowników",
       "previousPage": "Poprzednia strona",
       "nextPage": "Następna strona",
-      "createProject": "Utwórz projekt",
-      "loading": "Ładowanie..."
+      "createRestaurant": "Utwórz restaurację",
+      "loading": "Ładowanie...",
+      "manageTables": "Zarządzaj stolikami",
+      "manageReservations": "Zarządzaj rezerwacjami"
     },
     "projectPage": {
       "unauthorized": "Nieautoryzowany",
